--- a/style.scss
+++ b/style.scss
@@ -1,26 +1,19 @@
----
----
-
-//
-// IMPORTS
-//
-
 @import "reset";
 @import "variables";
+
 // Syntax highlighting @import is at the bottom of this file
 
-/**************/
+/***************/
 /* BASE RULES */
-/**************/
-
+/***************/
 html {
   font-size: 100%;
 }
 
 body {
-	background: $white;
+  background: #000; /* Black background */
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  color: #fff; /* White text */
 }
 
 .container {
@@ -32,13 +25,11 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: $darkerGray;
+  color: #fff; /* White headings */
   font-weight: bold;
-
   line-height: 1.7;
   margin: 1em 0 15px;
   padding: 0;
-
   @include mobile {
     line-height: 1.4;
   }
@@ -61,7 +52,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: $gray;
+  color: #ccc; /* Light gray for minor headings */
 }
 
 p {
@@ -69,11 +60,11 @@ p {
 }
 
 a {
-  color: $blue;
+  color: #ccc; /* Light gray links */
   text-decoration: none;
-	cursor: pointer;
+  cursor: pointer;
   &:hover, &:active {
-    color: $blue;
+    color: #fff; /* White on hover */
   }
 }
 
@@ -117,47 +108,44 @@ img {
 
 .date {
   font-style: italic;
-  color: $gray;
+  color: #ccc; /* Light gray dates */
 }
 
 // Specify the color of the selection
 ::-moz-selection {
-  color: $black;
-  background: $lightGray;
+  color: #000;
+  background: #fff;
 }
+
 ::selection {
-  color: $black;
-  background: $lightGray;
+  color: #000;
+  background: #fff;
 }
 
 // Nicolas Gallagher's micro clearfix hack
 // http://nicolasgallagher.com/micro-clearfix-hack/
 .clearfix:before,
 .clearfix:after {
-    content: " ";
-    display: table;
+  content: " ";
+  display: table;
 }
 
 .clearfix:after {
-    clear: both;
+  clear: both;
 }
 
 /*********************/
 /* LAYOUT / SECTIONS */
 /*********************/
 
-//
 // .masthead
-//
-
 .wrapper-masthead {
   margin-bottom: 50px;
 }
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
-
+  border-bottom: 1px solid #333; /* Dark gray border */
   @include mobile {
     text-align: center;
   }
@@ -168,13 +156,11 @@ img {
   width: 70px;
   height: 70px;
   margin-right: 15px;
-
   @include mobile {
     float: none;
     display: block;
     margin: 0 auto;
   }
-
   img {
     border-radius: 5px;
   }
@@ -182,7 +168,6 @@ img {
 
 .site-info {
   float: left;
-
   @include mobile {
     float: none;
     display: block;
@@ -192,7 +177,7 @@ img {
 
 .site-name {
   margin: 0;
-  color: $darkGray;
+  color: #fff;
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
@@ -202,9 +187,8 @@ img {
 
 .site-description {
   margin: -5px 0 0 0;
-  color: $gray;
+  color: #ccc; /* Light gray description */
   font-size: 16px;
-
   @include mobile {
     margin: 3px 0;
   }
@@ -215,35 +199,29 @@ nav {
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 18px;
-
   @include mobile {
     float: none;
     margin-top: 9px;
     display: block;
     font-size: 16px;
   }
-
   a {
     margin-left: 20px;
-    color: $darkGray;
+    color: #ccc; /* Light gray links */
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
-
     @include mobile {
       margin: 0 10px;
-      color: $blue;
+      color: #ccc; /* Light gray links */
     }
   }
 }
 
-//
 // .main
-//
-
 .posts > .post {
   padding-bottom: 2em;
-  border-bottom: 1px solid $lightGray;
+  border-bottom: 1px solid #333; /* Dark gray border */
 }
 
 .posts > .post:last-child {
@@ -254,17 +232,15 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid $gray;
+    border-left: 2px solid #ccc; /* Light gray quote border */
     padding: 0.1em 1em;
-    color: $gray;
+    color: #ccc; /* Light gray quote text */
     font-size: 22px;
     font-style: italic;
   }
-
   .comments {
     margin-top: 10px;
   }
-
   .read-more {
     text-transform: uppercase;
     font-size: 15px;
@@ -273,9 +249,9 @@ nav {
 
 .wrapper-footer {
   margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
+  border-top: 1px solid #333; /* Dark gray border */
+  border-bottom: 1px solid #333; /* Dark gray border */
+  background-color: #222; /* Dark background */
 }
 
 footer {
