--- a/style.scss
+++ b/style.scss
@@ -1,19 +1,26 @@
+---
+---
+
+//
+// IMPORTS
+//
+
 @import "reset";
 @import "variables";
-
 // Syntax highlighting @import is at the bottom of this file
 
-/***************/
+/**************/
 /* BASE RULES */
-/***************/
+/**************/
+
 html {
   font-size: 100%;
 }
 
 body {
-  background: #000; /* Black background */
+	background: $white;
   font: 18px/1.4 $helvetica;
-  color: #fff; /* White text */
+  color: $darkGray;
 }
 
 .container {
@@ -25,11 +32,13 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: #fff; /* White headings */
+  color: $darkerGray;
   font-weight: bold;
+
   line-height: 1.7;
   margin: 1em 0 15px;
   padding: 0;
+
   @include mobile {
     line-height: 1.4;
   }
@@ -52,7 +61,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: #ccc; /* Light gray for minor headings */
+  color: $gray;
 }
 
 p {
@@ -60,11 +69,11 @@ p {
 }
 
 a {
-  color: #ccc; /* Light gray links */
+  color: $blue;
   text-decoration: none;
-  cursor: pointer;
+	cursor: pointer;
   &:hover, &:active {
-    color: #fff; /* White on hover */
+    color: $blue;
   }
 }
 
@@ -108,44 +117,47 @@ img {
 
 .date {
   font-style: italic;
-  color: #ccc; /* Light gray dates */
+  color: $gray;
 }
 
 // Specify the color of the selection
 ::-moz-selection {
-  color: #000;
-  background: #fff;
+  color: $black;
+  background: $lightGray;
 }
-
 ::selection {
-  color: #000;
-  background: #fff;
+  color: $black;
+  background: $lightGray;
 }
 
 // Nicolas Gallagher's micro clearfix hack
 // http://nicolasgallagher.com/micro-clearfix-hack/
 .clearfix:before,
 .clearfix:after {
-  content: " ";
-  display: table;
+    content: " ";
+    display: table;
 }
 
 .clearfix:after {
-  clear: both;
+    clear: both;
 }
 
 /*********************/
 /* LAYOUT / SECTIONS */
 /*********************/
 
+//
 // .masthead
+//
+
 .wrapper-masthead {
   margin-bottom: 50px;
 }
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid #333; /* Dark gray border */
+  border-bottom: 1px solid $lightGray;
+
   @include mobile {
     text-align: center;
   }
@@ -156,11 +168,13 @@ img {
   width: 70px;
   height: 70px;
   margin-right: 15px;
+
   @include mobile {
     float: none;
     display: block;
     margin: 0 auto;
   }
+
   img {
     border-radius: 5px;
   }
@@ -168,6 +182,7 @@ img {
 
 .site-info {
   float: left;
+
   @include mobile {
     float: none;
     display: block;
@@ -177,7 +192,7 @@ img {
 
 .site-name {
   margin: 0;
-  color: #fff;
+  color: $darkGray;
   cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
@@ -187,8 +202,9 @@ img {
 
 .site-description {
   margin: -5px 0 0 0;
-  color: #ccc; /* Light gray description */
+  color: $gray;
   font-size: 16px;
+
   @include mobile {
     margin: 3px 0;
   }
@@ -199,29 +215,35 @@ nav {
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 18px;
+
   @include mobile {
     float: none;
     margin-top: 9px;
     display: block;
     font-size: 16px;
   }
+
   a {
     margin-left: 20px;
-    color: #ccc; /* Light gray links */
+    color: $darkGray;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
+
     @include mobile {
       margin: 0 10px;
-      color: #ccc; /* Light gray links */
+      color: $blue;
     }
   }
 }
 
+//
 // .main
+//
+
 .posts > .post {
   padding-bottom: 2em;
-  border-bottom: 1px solid #333; /* Dark gray border */
+  border-bottom: 1px solid $lightGray;
 }
 
 .posts > .post:last-child {
@@ -232,15 +254,17 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid #ccc; /* Light gray quote border */
+    border-left: 2px solid $gray;
     padding: 0.1em 1em;
-    color: #ccc; /* Light gray quote text */
+    color: $gray;
     font-size: 22px;
     font-style: italic;
   }
+
   .comments {
     margin-top: 10px;
   }
+
   .read-more {
     text-transform: uppercase;
     font-size: 15px;
@@ -249,9 +273,9 @@ nav {
 
 .wrapper-footer {
   margin-top: 50px;
-  border-top: 1px solid #333; /* Dark gray border */
-  border-bottom: 1px solid #333; /* Dark gray border */
-  background-color: #222; /* Dark background */
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  background-color: $lightGray;
 }
 
 footer {
